styles/index.scss
/* ... */
.footer__copyright,
.footer__message {
  margin-top: 0.25rem;
  color: var(--text-col-alt);
  text-align: center;
  word-spacing: 0.125rem;
}

.footer__message {
  margin-bottom: -1rem;
}

.footer__copyright {
  font-size: var(--small-font);
}

.scrollup {
  background: linear-gradient(125deg, var(--accent-col), var(--accent-col-alt));
  padding: 0.125rem;
  border: 2px solid var(--text-col-alt);
  border-radius: 0.125rem;
  position: fixed;
  z-index: var(--tooltip-sp);
  right: 1rem;
  bottom: -20%;
  opacity: 80%;
  transition: 0.3s;

  &:hover {
    background-color: var(--accent-col);
  }

  &:active {
    scale: 90%;
  }
}

.scrollup__icon {
  color: var(--text-col-alt);
  font-size: 1.75rem;
}

.change-theme {
  margin-right: 1rem;
  color: var(--text-col-alt);
  font-size: 1.5rem;
  cursor: pointer;
}

//---------SCROLLBAR---------
::-webkit-scrollbar {
  width: 0.6rem;
  background-color: var(--base-col-alt);
  border-radius: 0.25rem;
}

::-webkit-scrollbar-thumb {
  background-color: var(--base-col);
  border-radius: 0.25rem;

  &:hover {
    scale: 105%;
    cursor: pointer;
  }
}

//---------MEDIA QUERIES---------
//mobile screen - iPhone 13 Pro Max - ref
@media screen and (max-width: 430px) {
  .container {
    margin: 0 2rem;
  }

  .nav__menu {
    padding: 1.5rem 0.25rem;
  }

  .nav__list {
    column-gap: 0;
  }

  .home__content {
    grid-template-columns: 1fr 3fr;
  }

  .home__backdrop {
    width: 240px;
  }

  .specialization__container {
    grid-template-columns: max-content;
    justify-content: center;
  }

  .specialization__content {
    width: 280px;
    padding: 2rem 3.5rem 2rem 3rem;
  }

  .specialization__modal {
    padding: 0 0.5rem;
  }
}

//tablet screen - iPad - ref
@media screen and (min-width: 808px) {
  body {
    margin: 0;
  }

  .page {
    padding: 5rem 0 2rem;
  }

  .page__subtitle {
    margin-bottom: 2rem;
  }

  .container {
    margin: 0 auto;
  }

  .header {
    top: 0;
    bottom: initial;
  }

  .header,
  .main,
  .footer {
    padding: 0 2rem;
  }

  .nav {
    height: 3.25rem;
    column-gap: 1rem;
  }

  .nav__close,
  .nav__toggle {
    display: none;
  }

  .nav__list {
    display: flex;
    align-items: center;
    column-gap: 2rem;
  }

  .nav__menu {
    margin-left: auto;
    margin-right: 1.25rem;
  }

  .nav__icon {
    display: none;
  }

  .change-theme {
    margin-left: 1.75rem;
  }

  .home__container,
  .skillset__container,
  .portfolio__container,
  .specialization__container,
  .contact__container {
    height: 82vh;
  }

  .home__container {
    row-gap: 5rem;
  }

  .home__content {
    grid-template-columns: max-content 3fr 2.5fr;
    column-gap: 2.25rem;
    padding-top: 6rem;
  }

  .home__data {
    grid-column: initial;
  }

  .home__image {
    justify-self: center;
    align-self: center;
    order: 1;
    margin-top: -3rem;
    scale: 110%;
  }

  .home__quicknav {
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 1.25rem;
    margin-top: 1.5rem;
    margin-bottom: 0;
  }

  .home__scroll {
    display: none;
  }

  .skillset {
    height: 96vh;
    padding: 6rem 1.5rem 0;
  }

  .skillset__content {
    font-size: var(--large-font);
    word-spacing: 0.25rem;
    line-height: 1.5rem;
  }

  .skillset__list {
    column-gap: 1.25rem;
    row-gap: 1.875rem;
  }

  .skillset__icon {
    height: 78px;
    width: 78px;
  }

  .portfolio {
    height: auto;
  }

  .portfolio__content {
    grid-template-columns: repeat(2, 1fr);
    padding: 0 0.25rem;
  }

  .slider__container {
    position: relative;
  }

  .slider__wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 3rem;
  }

  .portfolio__actions {
    flex-direction: row;
  }

  .slider__next,
  .slider__prev {
    display: none;
  }

  .specialization__container {
    grid-template-columns: repeat(2, 360px);
    justify-content: center;
  }

  .specialization__icon {
    font-size: 3.5rem;
  }

  .specialization__content {
    padding: 3rem 5.5rem 2.5rem 3.5rem;
  }

  .specialization__modal-content {
    width: 500px;
    padding: 2rem;
  }

  .portfolio__image {
    height: auto;
    width: 380px;
  }

  .portfolio__content {
    align-items: center;
  }

  .specialization {
    height: 96vh;
  }

  .specialization__image {
    height: auto;
    width: 500px;
  }

  .specialization__content {
    height: 300px;
  }

  .contact__container {
    height: 70vh;
    margin-top: 1rem;
  }

  .contact__form {
    margin-top: 0.75rem;
  }

  .contact__content {
    width: 460px;
    display: flex;
    flex-direction: column;
    padding: 1rem;
  }

  .contact__socials-links {
    gap: 3rem;
    margin-top: 1.25rem;
  }

  .footer__container {
    display: flex;
    flex-direction: column;
  }

  .footer__copyright,
  .footer__message {
    word-spacing: 0.125rem;
  }
}
/* ... */

